<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FicherosActivity">


    <item
        android:id="@+id/actionExternalStorage"
        android:title="@string/opcionAlmacenamientoExterno"
        android:icon="@drawable/ic_sd_card_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:enabled="false" />

    <item
        android:id="@+id/actionLocalStorage"
        android:title="@string/opcionAlmacenamientoLocal"
        android:icon="@drawable/ic_folder_open_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:enabled="false" />

    <item
        android:id="@+id/accionVaciar"
        android:title="@string/opcionVaciar"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/actionManageFiles"
        android:title="@string/opcionGestionarFicheros"
        android:icon="@drawable/ic_insert_drive_file_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/accionConfigurar"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_white_48dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText" />

</menu>